Fixed layout grid alignment

--- a/style.css
+++ b/style.css
@@ -1,107 +1,172 @@
-body{
+*{
     margin: 0;
+    padding: 0;
 }
+
 .container{
     display: grid;
     grid-template-columns: 1fr 4fr;
-    min-height: 100%;
 }
 
 .sidebar{
-    grid-row: 1 / 4;
-    display: grid;
-    grid-template-rows: 75px 300px 250px 1fr;
-    background-color: #0284c7;
+    background-color: #0ea5e9;
+    grid-column: 1 / 2;
     height: 100vh;
 }
 
-#dash{
-    color: white;
-    margin-left: 40px;
+.dashboard{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 10px;
+    align-items: center;
+    margin-left: 30px;
+    margin-top: 10px;
 }
 
-ul{
-    list-style-type: none;
+#dash{
+    font-size: 1.7rem;
     color: white;
-    font-size: 1.3rem;
-    font-weight: 700;
+}
+
+.menu ul{
+    color: white;
+    font-size: 1.5rem;
+    margin: 40px;
+    list-style-type: none;
+}
+
+.setting-privacy ul{
+    color: white;
+    font-size: 1.5rem;
+    margin: 40px;
+    margin-top: 80px;
+    list-style-type: none;
 }
 
 li{
-    margin-bottom: 20px;
+    margin-bottom: 25px;
+}
+
+#dash-img{
+    width: 30px;
+    height: 30px;
+    color: white;
+}
+
+.img{
+    width: 20px;
+    height: 20px;
+}
+
+#large-img{
+    width: 50px;
+    height: 50px;
+}
+
+.img-bell{
+    width: 50px;
+    height: 30px;
+}
+
+.content{
+    grid-column: 2 / 3;
+}
+
+.header{
+    background-color: white;
+    height: 15vh;
+    display: grid;
+    grid-template-rows: 50% 50%;
 }
 
 .top-row{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 5px;
+    margin: 0 40px;
+}
+
+#input-btn{
+    width: 400px;
+    border-radius: 10px;
 }
 
 .bottom-row{
     display: flex;
     justify-content: space-between;
+    margin: 0 40px;
 }
 
-#hello{
-    margin-bottom: 0;
-    font-weight: bold;
-    font-size: 1rem;
+.right-side{
+    display: flex;
+    gap: 10px;
 }
 
-#wanly{
-    margin-top: 0;
-    font-size: 1.2rem;
+.left-end{
+    display: flex;
 }
 
 button{
+    width: 110px;
+    height: 35px;
     background-color: #0ea5e9;
+    border: 2px solid #0ea5e9;
+    border-radius: 10px;
     color: white;
-    width: 85px;
-    height: 30px;
-    border-radius: 15px;
-    border: #0ea5e9;
-    margin-bottom: 0;
-    position: relative;
-    top: 25%;
+}
+
+.right-end{
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
 }
 
 .main-content{
-    background-color: #d3d3d3;
+    background-color: #cbd5e1;
+    height: 85vh;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 70% 30%;
 }
 
-.project{
+.projects{
     grid-column: 1 / 2;
-    gap: 0;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(3, minmax(210px,1fr));
+    grid-template-columns: 50% 50%;
+}
+
+#project-header{
+    margin-left: 20px;
+}
+
+.cards-left{
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.cards-right{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .card{
-    height: 150px;
-    width: 300px;
+    width: 250px;
+    height: 200px;
     background-color: white;
-    border-left: 5px solid orange;
-    margin-left: 10px;
+    gap: 10px;
 }
 
-h4{
-    margin-bottom: 0;
-}
-
-.text{
-    margin-top: 0;
-}
-
-.news-card{
-    height: 220px;
-    width: 200px;
-    background-color: white;
-    margin-left: 10px;
-}
-
-.footer{
+.trending{
     grid-column: 2 / 3;
+    display: grid;
+    grid-template-rows: 50% 50%;
+}
+
+.card-news{
+    width: 250px;
+    height: 250px;
+    background-color: white;
+    gap: 10px;
 }
